--- a/index.html
+++ b/index.html
@@ -6,39 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/output.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
-<body>
-    <div class="flex container mx-auto">
-        <div class="first bg-slate-300 w-full">
-            <div class="logo">
-                <svg viewBox="0 0 24 24" aria-hidden="true"
-                        class="w-8 m-auto r-4qtqp9 r-yyyyoo r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-lrsllp r-1nao33i r-16y2uox r-8kz0gk">
-                        <g>
-                            <path
-                                d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z">
-                            </path>
-                        </g>
-                    </svg>
-                    <span class="material-symbols-outlined">
-                        home
-                        </span>
+<body class="bg-black text-white m-3">
+    <div class="flex container mx-auto ">
+        <div class="first  w-full">
+            <div class="logo invert">
+                <img class="w-8 " src="images/logo.svg" alt="ok">
+
+
             </div>
-            <div class="sidebar">
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+            <div class="sidebar m-auto">
+                <ul class="flex flex-col  text-xl space-y-3">
+                    <li class="flex  gap-4"><img class="invert w-6" src="images/home.svg" alt="">Home</li>
+
+                    <li class="flex gap-4"><span class="material-symbols-outlined">search</span>Explore</li>
+                    <li class="flex gap-4"><span class="material-symbols-outlined">notifications</span>Notifications
+                    </li>
+                    <li class="flex gap-4"><span class="material-symbols-outlined">
+                            mail
+                        </span>Messages</li>
+                    <li class="flex gap-4">
+                        <img class="w-6 invert" src="images/grok.svg" alt="">Grok
+                    </li>
+                    <li class="flex gap-4"><span class="material-symbols-outlined">
+                            featured_play_list
+                        </span>Lists</li>
+                    <li class="flex gap-4"><span class="material-symbols-outlined">
+                            bookmark
+                        </span>Bookmarks</li>
+                    <li class="flex gap-4">
+                        <img class="w-6 invert" src="images/communities.svg" alt="">Communities
+                    </li>
+                    <li class="flex gap-4">
+                        <img class="w-6 invert" src="images/premium.svg" alt="">Premium
+                    </li>
+                    <li class="flex gap-4">
+                        <img class="w-6 invert" src="images/profile.svg" alt="">Profile
+                    </li>
+                    <li class="flex gap-4"><span class="material-symbols-outlined">
+                            pending
+                        </span>More</li>
                 </ul>
             </div>
         </div>
-        <div class="second bg-red-600 w-full">b</div>
-        <div class="third bg-green-400 w-full">c</div>
+        <div class="second  w-full border-x-white border-[1px] border-y-black">b</div>
+        <div class="third  w-full">c</div>
     </div>
 
 </body>
