--- a/index.html
+++ b/index.html
@@ -4,56 +4,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home/X</title>
     <link rel="stylesheet" href="./css/output.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
-<body class="bg-black text-white m-3">
-    <div class="flex container mx-auto ">
-        <div class="first  w-full">
-            <div class="logo invert">
-                <img class="w-8 " src="images/logo.svg" alt="ok">
+<body class="bg-black text-white ">
+    <div class="flex container mx-auto  ">
+        <div class="first  w-[75%] my-5 pr-20">
+            <div class="logo invert pr-20  pb-6">
+                <img class="w-8 m-auto " src="images/logo.svg" alt="ok">
 
 
             </div>
-            <div class="sidebar m-auto">
-                <ul class="flex flex-col  text-xl space-y-3">
-                    <li class="flex  gap-4"><img class="invert w-6" src="images/home.svg" alt="">Home</li>
-
-                    <li class="flex gap-4"><span class="material-symbols-outlined">search</span>Explore</li>
-                    <li class="flex gap-4"><span class="material-symbols-outlined">notifications</span>Notifications
+            <div class="sidebar flex justify-end m-auto">
+                <ul class="flex flex-col  text-xl space-y-1 ">
+                    <li
+                        class="flex  gap-4 w-fit px-4 py-2 hover:bg-gray-900 hover:border-0 hover:rounded-2xl hover:cursor-pointer">
+                        <img class="invert w-6" src="images/home.svg" alt="">Home
                     </li>
-                    <li class="flex gap-4"><span class="material-symbols-outlined">
+
+                    <li
+                        class="flex  gap-4 w-fit px-4 py-2 hover:bg-gray-900 hover:border-0 hover:rounded-2xl hover:cursor-pointer">
+                        <span class="material-symbols-outlined">search</span>Explore
+                    </li>
+                    <li
+                        class="flex  gap-4 w-fit px-4 py-2 hover:bg-gray-900 hover:border-0 hover:rounded-2xl hover:cursor-pointer">
+                        <span class="material-symbols-outlined">notifications</span>Notifications
+                    </li>
+                    <li
+                        class="flex  gap-4 w-fit px-4 py-2 hover:bg-gray-900 hover:border-0 hover:rounded-2xl hover:cursor-pointer">
+                        <span class="material-symbols-outlined">
                             mail
-                        </span>Messages</li>
-                    <li class="flex gap-4">
+                        </span>Messages
+                    </li>
+                    <li
+                        class="flex  gap-4 w-fit px-4 py-2 hover:bg-gray-900 hover:border-0 hover:rounded-2xl hover:cursor-pointer">
                         <img class="w-6 invert" src="images/grok.svg" alt="">Grok
                     </li>
-                    <li class="flex gap-4"><span class="material-symbols-outlined">
+                    <li
+                        class="flex  gap-4 w-fit px-4 py-2 hover:bg-gray-900 hover:border-0 hover:rounded-2xl hover:cursor-pointer">
+                        <span class="material-symbols-outlined">
                             featured_play_list
-                        </span>Lists</li>
-                    <li class="flex gap-4"><span class="material-symbols-outlined">
+                        </span>Lists
+                    </li>
+                    <li
+                        class="flex  gap-4 w-fit px-4 py-2 hover:bg-gray-900 hover:border-0 hover:rounded-lg hover:cursor-pointer">
+                        <span class="material-symbols-outlined">
                             bookmark
-                        </span>Bookmarks</li>
-                    <li class="flex gap-4">
+                        </span>Bookmarks
+                    </li>
+                    <li
+                        class="flex  gap-4 w-fit px-4 py-2 hover:bg-gray-900 hover:border-0 hover:rounded-lg hover:cursor-pointer">
                         <img class="w-6 invert" src="images/communities.svg" alt="">Communities
                     </li>
-                    <li class="flex gap-4">
+                    <li
+                        class="flex  gap-4 w-fit px-4 py-2 hover:bg-gray-900 hover:border-0 hover:rounded-lg hover:cursor-pointer">
                         <img class="w-6 invert" src="images/premium.svg" alt="">Premium
                     </li>
-                    <li class="flex gap-4">
+                    <li
+                        class="flex  gap-4 w-fit px-4 py-2 hover:bg-gray-900 hover:border-0 hover:rounded-lg hover:cursor-pointer">
                         <img class="w-6 invert" src="images/profile.svg" alt="">Profile
                     </li>
-                    <li class="flex gap-4"><span class="material-symbols-outlined">
+                    <li
+                        class="flex  gap-4 w-fit px-4 py-2 hover:bg-gray-900 hover:border-0 hover:rounded-lg hover:cursor-pointer">
+                        <span class="material-symbols-outlined">
                             pending
-                        </span>More</li>
+                        </span>More
+                    </li>
+                    <button
+                        class="bg-blue-400 text-white font-bold px-28 py-4 border-0 rounded-full hover:cursor-pointer">Post</button>
+
+                    <div class="user flex gap-3 items-center">
+                        <img class="rounded-full w-10 h-10 my-20" src="images/user.png" alt="">
+                        <div class="userCredential">
+                            <div class="blur-sm">Aastha S</div>
+                            <div class="blur-sm">@S1010952S</div>
+                        </div>
+                        <div class="dots ml-16">...</div>
+                    </div>
                 </ul>
+
             </div>
         </div>
-        <div class="second  w-full border-x-white border-[1px] border-y-black">b</div>
-        <div class="third  w-full">c</div>
+
+        <!-- Middle Section -->
+        <div class="second  w-full h-screen border-x-slate-800 border-[1px] border-y-black">b
+
+        </div>
+
+        <!-- Right Section -->
+        <div class="third  w-full mx-4">
+            <div class="search flex items-center gap-2 my-5 py-0 bg-gray-900 rounded-full">
+                <div class="px-3 search-image">
+                    <span class=" w-4 h-4 material-symbols-outlined">search</span>
+                </div>
+
+                <input type="text" class="w-auto bg-gray-900 text-white rounded-full py-2.5 text-start"
+                    placeholder="Search">
+            </div>
+
+            <div class="whatIsHappening p-3  bg-gray-900 rounded-lg flex flex-col gap-4">
+                <h1 class="font-extrabold">What's happening</h1>
+                <div>
+                    <h3 class="font-bold">Thunder at Spurs</h3>
+                    <p class="text-gray-600  text-sm">
+                        NBA . 21 minutes ago
+                    </p>
+                </div>
+                <div>
+                    <p class="text-gray-600  text-sm">
+                        NBA . 21 minutes ago
+                    </p>
+                    <h3 class="font-bold">Thunder at Spurs</h3>
+                    <p class="text-gray-600  text-sm">
+                        NBA . 21 minutes ago
+                    </p>
+                </div>
+                <div>
+                    <p class="text-gray-600  text-sm">
+                        NBA . 21 minutes ago
+                    </p>
+                    <h3 class="font-bold">Thunder at Spurs</h3>
+                    <p class="text-gray-600  text-sm">
+                        NBA . 21 minutes ago
+                    </p>
+                </div>
+               
+
+            </div>
+        </div>
     </div>
 
 </body>
