--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
         </div>
 
         <!-- Right Section -->
-        <div class="third  w-[55%] mx-3 mr-40 ">
-            <div class="search  flex items-center gap-2 m-3 py-0 bg-[#16181c] rounded-full fixed top-0">
+        <div class="third hidden lg:block w-[55%] mx-3 mr-40  ">
+            <div class="search flex items-center gap-2 m-3 py-0 w-24 bg-[#16181c] rounded-full fixed top-0">
                 <div class="px-3 search-image">
                     <span class=" w-4 h-4 material-symbols-outlined">search</span>
                 </div>
