changed directory structure

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home/X</title>
-    <link rel="stylesheet" href="./css/output.css">
+    <link rel="stylesheet" href="../css/output.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
@@ -16,12 +16,12 @@
 
             <div class="sidebar flex flex-col justify-end m-auto sticky top-0">
                 <div class="logo invert w-fit pb-6  xl:pr-48 ">
-                    <img class="w-8 m-auto " src="images/logo.svg" alt="ok">
+                    <img class="w-8 m-auto " src="../../images/logo.svg" alt="ok">
                 </div>
                 <ul class="flex flex-col  text-xl space-y-1 ">
                     <li
                         class="flex  gap-4 w-fit px-4 py-2 hover:bg-[#16181c] hover:border-0 hover:rounded-2xl hover:cursor-pointer">
-                        <img class="w-6 invert" src="images/home.svg" alt=""><span class="hidden xl:block">Home</span>
+                        <img class="w-6 invert" src="../images/home.svg" alt=""><span class="hidden xl:block">Home</span>
                     </li>
 
                     <li
@@ -40,7 +40,7 @@
                     </li>
                     <li
                         class="flex  gap-4 w-fit px-4 py-2 hover:bg-[#16181c] hover:border-0 hover:rounded-2xl hover:cursor-pointer">
-                        <img class="w-6 invert" src="images/grok.svg" alt=""><span class="hidden xl:block">Grok</span>
+                        <img class="w-6 invert" src="../images/grok.svg" alt=""><span class="hidden xl:block">Grok</span>
                     </li>
                     <li
                         class="flex  gap-4 w-fit px-4 py-2 hover:bg-[#16181c] hover:border-0 hover:rounded-2xl hover:cursor-pointer">
@@ -56,15 +56,15 @@
                     </li>
                     <li
                         class="flex  gap-4 w-fit px-4 py-2 hover:bg-[#16181c] hover:border-0 hover:rounded-lg hover:cursor-pointer">
-                        <img class="w-6 invert" src="images/communities.svg" alt=""><span class="hidden xl:block">Communities</span>
+                        <img class="w-6 invert" src="../images/communities.svg" alt=""><span class="hidden xl:block">Communities</span>
                     </li>
                     <li
                         class="flex  gap-4 w-fit px-4 py-2 hover:bg-[#16181c] hover:border-0 hover:rounded-lg hover:cursor-pointer">
-                        <img class="w-6 invert" src="images/premium.svg" alt=""><span class="hidden xl:block">Premium</span>
+                        <img class="w-6 invert" src="../images/premium.svg" alt=""><span class="hidden xl:block">Premium</span>
                     </li>
                     <li
                         class="flex  gap-4 w-fit px-4 py-2 hover:bg-[#16181c] hover:border-0 hover:rounded-lg hover:cursor-pointer">
-                        <img class="w-6 invert" src="images/profile.svg" alt=""><span class="hidden xl:block">Profile</span>
+                        <img class="w-6 invert" src="../images/profile.svg" alt=""><span class="hidden xl:block">Profile</span>
                     </li>
                     <li
                         class="flex  gap-4 w-fit px-4 py-2 hover:bg-[#16181c] hover:border-0 hover:rounded-lg hover:cursor-pointer">
@@ -82,7 +82,7 @@
                     </button>
 
                     <div class="user flex gap-3 items-center">
-                        <img class="rounded-full w-10 h-10 my-20" src="images/user.png" alt="">
+                        <img class="rounded-full w-10 h-10 my-20" src="../images/user.png" alt="">
                         <div class="userCredential">
                             <div class="blur-sm"><span class="hidden xl:block">Aastha S</span></div>
                             <div class="blur-sm"><span class="hidden xl:block">@S1010952S</span></div>
@@ -111,7 +111,7 @@
 
             <div class="whatishappening flex gap-3">
                 <div class="img m-2">
-                    <img class="rounded-full " src="images/user.png" alt="">
+                    <img class="rounded-full " src="../images/user.png" alt="">
                 </div>
                 <div class="w-full">
                     <input class=" text-xl w-full my-5 h-7 outline-none bg-black text-white " type="text"
@@ -158,7 +158,7 @@
                 <div class="h-[1px] w-full bg-gray-700"></div>
                 <div class="contentItem ">
                     <div class="flex gap-4 p-2">
-                        <img class="rounded-full" src="images/user.png" alt="">
+                        <img class="rounded-full" src="../images/user.png" alt="">
                         <div class="details ">
                             <div class="heading flex justify-between ">
                                 <p class="font-bold">Dom Lucre|Breaker of Narratives@dom_lucre.8h</p>
@@ -170,7 +170,7 @@
 
                     </div>
                     <div class="imgcontent rounded-2xl pl-24 pr-3 pb-6">
-                        <img class="rounded-2xl" src="images/contentItem1.jpg" alt="">
+                        <img class="rounded-2xl" src="../images/contentItem1.jpg" alt="">
                     </div>
 
                 </div>
@@ -180,7 +180,7 @@
                 <div class="h-[1px] w-full bg-gray-700"></div>
                 <div class="contentItem ">
                     <div class="flex gap-4 p-2">
-                        <img class="rounded-full" src="images/user.png" alt="">
+                        <img class="rounded-full" src="../images/user.png" alt="">
                         <div class="details ">
                             <div class="heading flex justify-between ">
                                 <p class="font-bold">Historic Vids|@historyinmemes.4h</p>
@@ -192,14 +192,14 @@
 
                     </div>
                     <div class="imgcontent rounded-2xl pl-24 pr-3 pb-6">
-                        <img class="rounded-2xl" src="images/contentItem1.jpg" alt="">
+                        <img class="rounded-2xl" src="../images/contentItem1.jpg" alt="">
                     </div>
 
                 </div>
                 <div class="h-[1px] w-full bg-gray-700"></div>
                 <div class="contentItem ">
                     <div class="flex gap-4 p-2">
-                        <img class="rounded-full" src="images/user.png" alt="">
+                        <img class="rounded-full" src="../images/user.png" alt="">
                         <div class="details ">
                             <div class="heading flex justify-between ">
                                 <p class="font-bold">Historic Vids|@historyinmemes . 4h</p>
@@ -211,7 +211,7 @@
 
                     </div>
                     <div class="imgcontent rounded-2xl pl-24 pr-3 pb-6">
-                        <img class="rounded-2xl" src="images/contentItem1.jpg" alt="">
+                        <img class="rounded-2xl" src="../images/contentItem1.jpg" alt="">
                     </div>
 
                 </div>
@@ -239,7 +239,7 @@
                             NBA . 21 minutes ago
                         </p>
                     </div>
-                    <div><img class="w-24 h-20 rounded-lg  object-fill" src="images/rightBarImage.jpg" alt=""></div>
+                    <div><img class="w-24 h-20 rounded-lg  object-fill" src="../images/rightBarImage.jpg" alt=""></div>
                 </div>
                 <div class="item hover:bg-[#212329]">
                     <p class="text-gray-600  text-xs">
@@ -292,7 +292,7 @@
                                 alt="foodandwinelogo">
                             <div class="flex flex-col">
                                 <h3 class="font-semibold">Food & Wine <span><img class="w-4 h-4"
-                                            src="images/yellowTick.svg" alt=""></span></h3>
+                                            src="../images/yellowTick.svg" alt=""></span></h3>
                                 <p class="text-gray-600 ">
                                     @foodandwine
                                 </p>
